<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="create_entry">Create Entry</string>
    <string name="student_id">Student ID</string>
    <string name="store">Store</string>
    <string name="make_entry">Make entry</string>
    <string name="add_parent">Add Parent</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="scanner">Scanner</string>
    <string name="generate">Generate</string>
    <string name="generated">Generated</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="register_as">register as:</string>
    <string name="set_a_notification">Set a Notification</string>
    <string name="abcd">abcd</string>
    <string name="hello_world">hello world</string>
    <string name="kotlinqrcodescanner">KotlinQRCodeSCanner</string>
    <string name="default_text">Default text</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="todo">TODO</string>
    <string name="pickup_pal">PickUp Pal</string>
    <string name="are_you_picking_up_your_kid">Has the student been safely taken care of?</string>
    <string name="time">time</string>
    <string name="test">test</string>
    <string name="set_notification" />
    <string name="Set_Notification">set_notification</string>
    <string name="sn">Set Notification</string>
    <string name="emergency_alarm_type">Emergency Alarm Type</string>
    <string name="other_update">Other Update</string>
    <string name="class_update">Class Update</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="SN">Set Notification</string>
    <string name="EAT">Emergency Alarm Type</string>
    <string name="CU">Class Update</string>
    <string name="OU">Other Update</string>
    <string name="D">Description</string>
    <string name="class_choice">Class choice</string>
    <string name="classid">Class ID or Srudent ID</string>
    <string name="enter_id">Enter ID</string>
</resources>