<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".NotificationActivity">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_pal"
        android:textColor="@color/purple_700"
        android:textSize="45sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:src="@drawable/pick_up"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_picking_up_your_kid"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:src="@drawable/img"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/teal_200"
        android:layout_marginTop="20dp"
        android:text="@string/time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/Approve"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:text="@string/yes"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Denied"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/black"
            app:backgroundTint="@color/red"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
