<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/layout_result"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">

         <ImageView
             android:src="@drawable/qrcode_scan"
             android:layout_width="100dp"
             android:layout_height="100dp"/>

         <TextView
             android:id="@+id/textResult"
             android:layout_marginTop="16dp"
             android:textSize="26dp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

     </androidx.appcompat.widget.LinearLayoutCompat> -->

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/cadmium_violet"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="1dp"
        app:fabCradleVerticalOffset="10dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kotlinqrcodescanner"
        app:backgroundTint="@color/cadmium_violet"
        app:tint="@android:color/white"
        android:src="@drawable/qrcode_scan"
        app:layout_anchor="@id/bottomAppBar"
        />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/black_shade_1"
        android:text="@string/scanner" />

    <Button
        android:id="@+id/qrgen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate" />

    <!-- > <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back" /> -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
